crates/toml_edit/tests/fixtures/invalid/string/bad-escape-2.stderr
TOML parse error at line 1, column 43
  |
1 | invalid-escape = "This string has a bad \  escape character."
  |                                           ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
